--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.EyesGenetic" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/cyan_700</item>
-        <item name="myColorPrimaryLight">@color/cyan_50</item>
-        <item name="colorPrimaryDark">@color/cyan_100</item>
+        <item name="colorPrimary">@color/teal_700</item>
+        <item name="myColorPrimaryLight">@color/teal_50</item>
+        <item name="colorPrimaryDark">@color/teal_100</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="strokeColor">?attr/colorPrimary</item>
         <item name="colorAccent">?attr/colorPrimary</item>
