--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,6 @@
     <dimen name="step_x_large">48dp</dimen>
     <dimen name="step_large_plus">28dp</dimen>
     <dimen name="step_large">32dp</dimen>
-    <dimen name="radius_large">36dp</dimen>
     <dimen name="stroke_width_large">4dp</dimen>
     <dimen name="text_size_large">16sp</dimen>
 
@@ -44,8 +43,15 @@
     <!--  Card view  -->
     <dimen name="card_view_width">108dp</dimen>
     <dimen name="card_view_height">100dp</dimen>
-    <dimen name="radius_normal">12dp</dimen>
+    <dimen name="radius_large">36dp</dimen>
     <dimen name="stroke_width_normal">1dp</dimen>
+
+    <dimen name="card_view_width_small">86dp</dimen>
+    <dimen name="card_view_height_small">80dp</dimen>
+    <dimen name="radius_small">28dp</dimen>
+
+
+
 
     <!-- Elevation -->
     <dimen name="elevation_large">8dp</dimen>
