--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,8 +34,17 @@
         <item name="android:layout_marginTop">@dimen/step_normal</item>
     </style>
 
-    <!--   2.1. child style for title -->
+    <!--   2.2. child style for select -->
     <style name="style_card_view_end" parent="style_card_view">
+        <item name="android:layout_marginTop">@dimen/step_normal</item>
+        <item name="android:layout_marginEnd">@dimen/step_minus_normal</item>
+    </style>
+
+    <!--   2.3. child style for children -->
+    <style name="style_card_view_children" parent="style_card_view">
+        <item name="android:layout_width">@dimen/card_view_width_small</item>
+        <item name="android:layout_height">@dimen/card_view_height_small</item>
+        <item name="cardCornerRadius">@dimen/radius_small</item>
         <item name="android:layout_marginTop">@dimen/step_normal</item>
         <item name="android:layout_marginEnd">@dimen/step_minus_normal</item>
     </style>
@@ -46,6 +55,14 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_margin">@dimen/step_normal</item>
         <item name="android:scaleType">fitCenter</item>
+    </style>
+
+    <!--   4.0 line style for image inside card -->
+    <style name="style_line">
+        <item name="android:layout_width">@dimen/step_xxx_small</item>
+        <item name="android:layout_height">@dimen/step_xxx_small</item>
+        <item name="android:layout_margin">@dimen/step_zero</item>
+        <item name="android:background">@color/orange_500</item>
     </style>
 
 
