logic for get child eyes color2

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
     <!--   1.2. child style for text -->
     <style name="heading_title_start" parent="heading_title">
         <item name="android:layout_marginStart">@dimen/step_large</item>
+        <item name="android:textSize">@dimen/text_size_large</item>
     </style>
 
 
