--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,11 +23,24 @@
     <!--   2.0 parent style for card -->
     <!--  do not use "app:cardCornerRadius" but "cardCornerRadius" only -->
     <style name="style_card_view">
-        <item name="android:layout_width">@dimen/card_view_width</item>
-        <item name="android:layout_height">@dimen/card_view_height</item>
-        <item name="cardCornerRadius">@dimen/radius_large</item>
+        <item name="android:layout_width">@dimen/card_view_width_small</item>
+        <item name="android:layout_height">@dimen/card_view_height_small</item>
+        <item name="cardCornerRadius">@dimen/radius_small</item>
         <item name="cardElevation">@dimen/elevation_normal</item>
         <item name="strokeWidth">@dimen/stroke_width_normal</item>
+        <item name="android:layout_marginTop">@dimen/step_normal</item>
+    </style>
+
+    <style name="style_card_view_back">
+        <item name="android:layout_width">@dimen/step_zero</item>
+        <item name="android:layout_height">@dimen/step_zero</item>
+        <item name="cardCornerRadius">@dimen/radius_small</item>
+        <item name="cardElevation">@dimen/elevation_normal</item>
+        <item name="strokeWidth">@dimen/step_zero</item>
+        <item name="android:layout_marginTop">@dimen/step_minus_normal</item>
+        <item name="android:layout_marginBottom">@dimen/step_minus_normal</item>
+        <item name="android:layout_marginStart">@dimen/step_large</item>
+        <item name="android:layout_marginEnd">@dimen/step_large</item>
     </style>
 
     <!--   2.1. child style for title -->
@@ -41,21 +54,37 @@
         <item name="android:layout_marginEnd">@dimen/step_minus_normal</item>
     </style>
 
-    <!--   2.3. child style for children -->
+    <!--   2.4. child style for children -->
     <style name="style_card_view_children" parent="style_card_view">
         <item name="android:layout_width">@dimen/card_view_width_small</item>
         <item name="android:layout_height">@dimen/card_view_height_small</item>
         <item name="cardCornerRadius">@dimen/radius_small</item>
-        <item name="android:layout_marginTop">@dimen/step_normal</item>
+        <item name="android:layout_marginTop">@dimen/step_zero</item>
         <item name="android:layout_marginEnd">@dimen/step_minus_normal</item>
+    </style>
+
+    <!--   2.4. child style for children -->
+    <style name="style_card_view_children_first" parent="style_card_view_children">
+        <item name="android:layout_marginTop">@dimen/step_normal</item>
     </style>
 
     <!--   3.0 parent style for image inside card -->
     <style name="style_image_inside_card_view">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_margin">@dimen/step_normal</item>
         <item name="android:scaleType">fitCenter</item>
+        <item name="android:padding">@dimen/step_normal</item>
+    </style>
+
+    <!--   3.1 parent style for image inside card question -->
+    <style name="style_image_inside_card_view_question">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:paddingTop">@dimen/step_large</item>
+        <item name="android:background">@color/gray_transparent</item>
+        <!--        <item name="android:contentDescription">@string/no_description</item>-->
+        <!--        <item name="android:layout_margin">@dimen/step_normal</item>-->
     </style>
 
     <!--   4.0 line style for image inside card -->
